Fix session timer in header layout issues, change wording

--- a/services/dsrp-web/src/styles/components/Header.scss
+++ b/services/dsrp-web/src/styles/components/Header.scss
@@ -81,10 +81,10 @@
 }
 
 .header-authorization-timer {
-  font-size: $heading-3-size;
+  font-size: $heading-4-size;
   color: $white;
 
   & .anticon {
-    font-size: $heading-3-size;
+    font-size: $heading-4-size;
   }
 }
